# sillyscope

./: README.md  install.sh  meson.build  sillyscope.cpp
